Client - Fixed day mode home page fireflies overflow

--- a/client/src/components/ShareBox/style.scss
+++ b/client/src/components/ShareBox/style.scss
@@ -1,7 +1,7 @@
 .share-box {
   position: relative;
   padding: 3em;
-  margin: 10em 0 1em;
+  margin: 10em 2em 1em 1em;
   color: #fff;
 
   .info {
@@ -37,7 +37,7 @@
   .share-image {
     position: absolute;
     bottom: 0;
-    left: 3em;
+    left: 4em;
     z-index: 2;
     width: 15em;
   }
@@ -45,7 +45,7 @@
   .halftone {
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     z-index: 0;
     width: 100%;
     height: 100%;
@@ -54,6 +54,13 @@
     opacity: 0.05;
   }
 
+  @media (min-width: 575px) {
+    .halftone,
+    &:before,
+    &:after {
+      width: calc(100% - 2em);
+    }
+  }
   @media (max-width: 767px) {
     font-size: 0.9em;
   }
