--- a/client/src/layouts/AfterHeader/style.scss
+++ b/client/src/layouts/AfterHeader/style.scss
@@ -29,6 +29,7 @@
     .floating-message {
       flex-direction: column;
       width: 100%;
+      padding-bottom: 0;
 
       .line {
         top: -2em;
